# cost-router

./: DECISIONS.md  README.md  app.py  pyproject.toml  requirements.txt
src/costrouter/: __init__.py  cli.py  config.py  models.py  pricing.py  router.py  server.py  telemetry.py
src/costrouter/classifier/: __init__.py  base.py  heuristic.py  llm_router.py
src/costrouter/providers/: __init__.py  anthropic.py  base.py  mock.py  openai.py
tests/: conftest.py  fixtures.py  test_classifier.py  test_cli.py  test_escalation.py  test_pricing.py  test_providers.py  test_router.py  test_server.py  test_telemetry.py
